--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "frontned",
+  "name": "frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -21,17 +21,16 @@
     "framer-motion": "^11.18.0",
     "lucide-react": "^0.471.1",
     "monaco-editor": "^0.52.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-monaco-editor": "^0.56.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
     "react-timer-hook": "^3.0.8",
     "reselect": "^5.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
