--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
+    "start": "npx http-server ./dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -19,6 +20,7 @@
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "framer-motion": "^11.18.0",
+    "http-server": "^14.1.1",
     "lucide-react": "^0.471.1",
     "monaco-editor": "^0.52.2",
     "react": "^18.2.0",
